home service and logic to compare the two  results added

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,10 @@
       </div>
     </ion-col>
   </ion-row>
-  <h2 class="ion-text-center">SELECCIONA TU JUGADA</h2>
+  <h2 class="ion-text-center">SELECCIONA TU JUGADA...</h2>
+  <div class="ion-text-center">
+    <ion-badge color="{{color}}">{{message}}</ion-badge>
+  </div>
   <app-result></app-result>
 </ion-grid>
 
